# study_rust

./: .gitignore  C++ TCP编程通常使用Socket API实现。以下是一个简单的TCP客户端.c  使用Redis，你必须知道的21个注意要点 - 知乎.html  有对象，但遇到更喜欢的人怎么办？.html  笔记.md  详解FIX协议的原理、消息格式及配置开发 - 知乎.html
My_test/: Cargo.toml  README.md  build.rs  default.toml
My_test/batch_db_2/: db
My_test/src/: common.rs  config.rs  main.rs  myyew.rs  outputcolor.rs  setting.rs  test.rs
My_test/src/my_gui/: custom_test.rs  drag_test.rs  events_test.rs  filedialog_test.rs  group_test.rs  mod.rs  my_gui.rs  order.rs  text.rs  trees_test.rs  valuators_test.rs
My_test/src/my_study/: mod.rs  study.rs  study1.rs
My_test/src/my_thread/: my_thread.rs
My_test/src/redistest/: mod.rs  redisclustertest.rs  redistest.rs
My_test/src/sled/: msled.rs
My_test/src/socketsub/: mod.rs  socket3.rs  sockettest.rs  sockettest2.rs
cassandra/: Cargo.toml
cassandra/src/: main.rs
phoenix_trader/common/: Cargo.toml
phoenix_trader/common/src/: constant.rs  logclient.rs
phoenix_trader/common/src/redisclient/: redisclient.rs
phoenix_trader/common/tests/: readme.md
phoenix_trader/phoenix_accountriskcenter/: Cargo.toml
phoenix_trader/phoenix_accountriskcenter/src/: main.rs
phoenix_trader/phoenix_accountriskcenter/src/app/: constdata.rs
phoenix_trader/phoenix_accountriskcenter/src/config/: settings.rs
phoenix_trader/phoenix_accountriskcenter/src/dataservice/: dbsetup.rs
phoenix_trader/phoenix_accountriskcenter/src/dataservice/dataaccess/: mod.rs  phoenix_account_assets_his.rs
phoenix_trader/phoenix_accountriskcenter/src/dataservice/entities/: phoenix_account_assets.rs  phoenix_account_assets_his.rs  phoenix_account_reset_detail.rs  phoenix_ast_frozendetail.rs  phoenix_ast_frozendetail_his.rs  phoenix_ast_operation_detail.rs  phoenix_deal_detail.rs  phoenix_deal_detail_his.rs  phoenix_oms_feeset.rs  phoenix_risk_details.rs  phoenix_sys_backconfig.rs  phoenix_sys_system.rs  phoenix_user_assets.rs  prelude.rs
phoenix_trader/phoenix_accountriskcenter/src/dataview/: userposition.rs  userstockposition.rs
phoenix_trader/phoenix_accountriskcenter/src/server/: server.rs
phoenix_trader/phoenix_accountriskcenter/src/server/service/: accountassetsservice.rs  assetsservice.rs  mod.rs  userassetsservice.rs  userpositionservice.rs
phoenix_trader/phoenix_accountriskcenter/src/webserver/: routers.rs
phoenix_trader/phoenix_exchanger/: Cargo.toml  build.rs  readme.md
phoenix_trader/phoenix_exchanger/src/config/: settings.rs
phoenix_trader/phoenix_exchanger/src/dataservice/: dbinit.rs  mod.rs
phoenix_trader/phoenix_exchanger/src/dataservice/dataaccess/: mod.rs
phoenix_trader/phoenix_exchanger/src/dataservice/entities/: command.md  mod.rs
phoenix_trader/phoenix_exchanger/src/protofiles/: phoenixexchanger.rs
phoenix_trader/phoenix_hqcalccenter/: Cargo.toml
phoenix_trader/phoenix_hqcalccenter/config/: log.yaml
phoenix_trader/phoenix_hqcalccenter/protos/: phoenixklinecenter.proto
phoenix_trader/phoenix_hqcalccenter/src/: main.rs  test.rs
phoenix_trader/phoenix_hqcalccenter/src/client/: mod.rs  tickmqclient.rs
phoenix_trader/phoenix_hqcalccenter/src/commonutil/: commonutil.rs
phoenix_trader/phoenix_hqcalccenter/src/config/: settings.rs
phoenix_trader/phoenix_hqcalccenter/src/protofiles/: marketdata.rs  phoenixtickcenter.rs
phoenix_trader/phoenix_hqcalccenter/src/server/service/: klineservice.rs  persistservice.rs  prelude.rs
phoenix_trader/phoenix_orderrouter/: Cargo.toml  bpmsg.rs  readme.md
phoenix_trader/phoenix_orderrouter/proto/: ordermsg.proto
phoenix_trader/phoenix_orderrouter/src/: main.rs
phoenix_trader/phoenix_orderrouter/src/config/: settings.rs
phoenix_trader/phoenix_orderrouter/src/protofiles/: mod.rs  phoenixorderrouter.rs
phoenix_trader/phoenix_riskcenter/: Cargo.toml
phoenix_trader/phoenix_riskcenter/protos/: riskcenter.proto
phoenix_trader/phoenix_riskcenter/src/: main.rs
phoenix_trader/phoenix_riskcenter/src/basicdata/: mintradeunit.rs
phoenix_trader/phoenix_riskcenter/src/client/: mod.rs
phoenix_trader/phoenix_riskcenter/src/protofiles/: phoenixaccountriskcenter.rs
phoenix_trader/phoenix_template/: Cargo.toml  readme.md
phoenix_trader/phoenix_template/src/: controller.rs
phoenix_trader/phoenix_template/src/config/: settings.rs
phoenix_trader/phoenix_template/src/protofiles/: mod.rs  phoenixriskcenter.rs
phoenix_trader/utility/: Cargo.toml
phoenix_trader/utility/src/: decimal_util.rs
rust_lib_test/My_test/: .gitpod.yml  Cargo.toml  default.toml  index.html
rust_lib_test/My_test/src/: outputcolor.rs  setting.rs  structure.rs
rust_lib_test/My_test/src/my_gui/: browsers_test.rs  button_test.rs  input_output.rs  labe_testl.rs  lmages_test.rs  menus_test.rs  state_test.rs  tables.rs
rust_lib_test/My_test/src/my_thread/: mod.rs
rust_lib_test/My_test/src/sled/: mod.rs  msled.rs
rust_lib_test/TestSql/: Cargo.toml
rust_lib_test/TestSql/src/: main.rs
rust_lib_test/TestSql/src/sql/: data.rs  mod.rs  rb_sql.rs  sql.rs
rust_lib_test/phoenix_trader/messagecenter/: Cargo.toml  build.rs
rust_lib_test/phoenix_trader/messagecenter/src/: lib.rs  notificationclient.rs
rust_lib_test/phoenix_trader/messagecenter/src/protofiles/: mod.rs  notification.rs  omsmessage.rs  phoenixnotification.rs
rust_lib_test/phoenix_trader/phoenix_assetscenter/: Cargo.toml
rust_lib_test/phoenix_trader/phoenix_assetscenter/src/: main.rs  server.rs
rust_lib_test/phoenix_trader/phoenix_assetscenter/src/app/: constdata.rs
rust_lib_test/phoenix_trader/phoenix_assetscenter/src/protofiles/: mod.rs  phoenixaccountriskcenter.rs
rust_lib_test/phoenix_trader/phoenix_assetscenter/src/service/: assetssvc.rs
rust_lib_test/phoenix_trader/phoenix_ordercenter/: Cargo.toml  build.rs  readme.md  下单.md
rust_lib_test/phoenix_trader/phoenix_ordercenter/config/: data.rs
rust_lib_test/phoenix_trader/phoenix_streamcenter/: Cargo.toml  build.rs
rust_lib_test/phoenix_trader/phoenix_streamcenter/src/: main.rs
socket/: Cargo.toml
socket/src/: main.rs
socket/src/mymio/: mod.rs  tcp_server.rs
(+424 files in other folders)
