[package]
name = "My_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.41"
chrono = "0.4.19"
libc = { version = "0.2.69", optional = true }
js-sys = { version = "0.3", optional = true } # contains FFI bindings for the JS Date API
convert_case = "0.4.0"
thread-id = "4.0.0"

wasm-bindgen-test = "0.3"
dashmap = "5.2.0"

crossbeam-channel = "0.5.4"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "full"] }

async-channel = "1.6.1"

serde = "1.0"
config = "0.13.1"

cached = "0.34.0"