[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility={path="../utility"}

strum = "0.24"
strum_macros = "0.24"

async-global-executor = "2"

lazy_static = "1.4"
once_cell = "1.16"
local-ip-address = "0.4.9"

redis = { version = "0.21", features = ["tokio-comp", "cluster"] }
redis_cluster_async = "0.7"

anyhow = "1.0"
log = "0.4"
log4rs = "1.0"
rust_decimal = "1.28.1"
rust_decimal_macros = "1.28.1"

rs-snowflake = "0.6"
dashmap = "5"
chrono = "0.4"
prost = "0.11"
rand = "0.8"
tonic = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cached = "0.40.0"
[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }

