[package]
name = "phoenix_hqcalccenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
utility = { path = "../utility" }
common = { path = "../common" }
async-stream = "0.3"
futures-util = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8.0", features = ["tls"] }
futures = "0.3.16"
futures-lite = "1.12.0"
prost = "0.11.0"
prost-types = "0.11.1"
# protobuf = { version = "3.0.2", features = ["with-bytes"] }
# AMQP
# lapin = { version = "2", default-features = false, features = ["rustls"] }
# Apache Cassandra connector
# cdrs-tokio = "6.2.0"
# cdrs = { version = "2" }
scylla = "0.5.0"
#redis
# redis = { version = "0.21", features = ["tokio-comp", "cluster", "r2d2"] }
# redis_cluster_async = "0.7"
# mobc-redis = "0.7.0"
# mobc = "0.7.3"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9.10", optional = true }
# rand = "0.8"
# Required for wellknown types
dashmap = "5.3.3"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
anyhow = "1.0"
# thiserror = "1.0"
log = "0.4"
config = "0.13"
# log4rs = "1.1"
sled = "0.34.7"
#time
chrono = "0.4.19"
time = "0.3.9"

# gRPC
[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
# protoc-rust = "2.25.1"
# [[bin]]
# name = "test"
# path = "src/test.rs"
