[package]
name = "phoenix_orderrouter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility"}
common = { path = "../common"}
tokio = { version = "1.19", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8", features = ["tls"] }
futures-util = "0.3"
futures = "0.3"
futures-lite = "1.12"
prost = "0.11"
prost-types = "0.11"
config = "0.13"
log = "0.4"
anyhow = "1.0"
dashmap = "5.2.0"
lazy_static = "1.4.0"
async-channel="1.7"
thiserror = "1.0"
# 时间
chrono = "0.4"
time = "0.3"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
h2 = "0.3"
# crossbeam="0.8"
# crossbeam-utils = "0.8"

rust_decimal = "^1"
rust_decimal_macros = "^1"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }

#[[bin]]
#name="test"
#path="src/test.rs"
#[[bin]]
#name="test2"
#path="src/test2.rs"
#[[bin]]
#name="test1"
#path="src/test1.rs"
#[[bin]]
#name="test4"
#path="src/test4.rs"
#[[bin]]
#name="test3"
#path="src/test3.rs"
