[package]
name = "phoenix_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility" }
common = { path = "../common" }

config = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lapin = { version = "2", default-features = false, features = ["rustls"] }
tonic = { version = "0.8", features = ["tls", "gzip"] }
prost = "0.11"
notify="5"
rust_decimal = "^1"
rust_decimal_macros = "^1"

anyhow = "1.0"
thiserror = "1.0"

log = "0.4"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
