[package]
name = "My_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
time = "0.1.41"
chrono = "0.4.19"
libc = { version = "0.2.69", optional = true }
js-sys = { version = "0.3", optional = true } # contains FFI bindings for the JS Date API
convert_case = "0.6.0"
thread-id = "4.0.0"
wasm-bindgen-test = "0.3"
dashmap = "5.2.0"
crossbeam-channel = "0.5.4"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
    "full"
] }
async-channel = "1.6.1"
# serde = "1.0"
config = "0.13.1"
cached = "0.42.0"
console = "0.15.0"
# loom = "0.5.6"
anyhow = "1.0"
rs-snowflake = "0.6"
vsdbsled = "0.34.7-p1"
sled = "0.34.7"
zerocopy = "0.6.0"
byteorder = "1.4.3"
local-ip-address = "0.4.9"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.0"
rust_decimal = "1.28.1"
rust_decimal_macros = "1.28.1"
axum = "0.6.4"
hyper = "0.14"
# yew 就是一个rust的前端框架。通过一系列工具链把rust代码编译成wasm运行在浏览器中。
yew = "0.18.0"

wasm_thread = "0.2.0"
num_cpus = "1.15.0"
ansi_term = "0.12.1"#Library for ANSI terminal colours and styles (bold, underline)
termcolor = "1.2.0"
# env_logger = "0.10.0"
# mio = "0.8.6"
# tikv-client = "0.1.0"
# GUI
iced = "0.9.0"
egui = "0.21.0"
fltk = { version = "^1.3", features = ["fltk-bundled"] }
fltk-table = "0.3.0"
# gtk = "0.17.1"
clap = "4.2.7"
tauri = "1.3.0"
[build-dependencies]
fl2rust = "0.4"
