[package]
name = "TestSql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.5", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros" ], default-features = false }
rbatis =  { version = "3.0", default-features = false, features = ["mysql","runtime-tokio-rustls", "format_bson"] } 
chrono = { version = "0.4", features = ["serde"] }
anyhow = "^1.0"
mysql = "22.1.0"
tokio = { version = "1", features = ["full"] }

mysql_async = "0.29.0"
rust_decimal = "1.17"
serde = { version = "1.0", features = ["derive"] }
rbson = "2.0"

array = "0.0.1"

time = "0.3.4"