[package]
name = "messagecenter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility" }
common = {path="../common"}

prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-lite = "1"

tonic = { version = "0.8", features = ["tls", "gzip"] }
lapin = { version = "2", default-features = false, features = ["rustls"] }
deadpool-lapin = "0.10"

anyhow = "1"
log = "0.4"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
