[package]
name = "phoenix_streamcenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
utility = { path = "../utility" }
common = { path = "../common" }
tokio = { version = "1.19", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
tonic = { version = "0.8", features = ["tls"] }
futures-util = "0.3"
futures = "0.3"
futures-lite = "1.12"
prost = "0.11"
prost-types = "0.11"
config = "0.13"
log = "0.4"
anyhow = "1.0"
# 时间
chrono = "0.4"
time = "0.3"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
h2 = "0.3"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
# [[bin]]
# name = "server"
# path = "src/main.rs"

